objects/CMPL123CME__MEDDEV__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__ManufacturerCountry__c</fullName>
        <description>ManufacturerCountry</description>
        <inlineHelpText>Manufacturer Country</inlineHelpText>
        <label>Manufacturer Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Address__c</fullName>
        <description>Manufacuter Address</description>
        <inlineHelpText>Manufacuter Address</inlineHelpText>
        <label>Manufacturer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Awareness_Date__c</fullName>
        <description>Manufacturer’s awareness date</description>
        <inlineHelpText>Manufacturer’s awareness date</inlineHelpText>
        <label>Manufacturer’s awareness date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_City__c</fullName>
        <description>Manufacturer City</description>
        <inlineHelpText>Manufacturer City</inlineHelpText>
        <label>Manufacturer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Contact__c</fullName>
        <description>Manufacturer Contact</description>
        <inlineHelpText>Manufacturer Contact</inlineHelpText>
        <label>Manufacturer Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Country__c</fullName>
        <description>Manufacturer Country</description>
        <inlineHelpText>Manufacturer Country</inlineHelpText>
        <label>Unused Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Device_Analysis_Results__c</fullName>
        <description>Manufacturer’s device analysis results</description>
        <inlineHelpText>Manufacturer’s device analysis results</inlineHelpText>
        <label>Manufacturer’s device analysis results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Disclaimer__c</fullName>
        <label>Manufacturer Disclaimer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Email__c</fullName>
        <description>Manufacturer Email</description>
        <inlineHelpText>Manufacturer Email</inlineHelpText>
        <label>Manufacturer E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Fax__c</fullName>
        <description>Manufacturer Fax</description>
        <inlineHelpText>Manufacturer Fax</inlineHelpText>
        <label>Manufacturer Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Name__c</fullName>
        <description>Manufacturer Name</description>
        <inlineHelpText>Manufacturer Name</inlineHelpText>
        <label>Manufacturer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Phone__c</fullName>
        <description>Manufacturer Phone</description>
        <inlineHelpText>Manufacturer Phone</inlineHelpText>
        <label>Manufacturer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Postal_code__c</fullName>
        <description>Postcode</description>
        <inlineHelpText>Postcode</inlineHelpText>
        <label>Manufacturer Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Preliminary_Analysis__c</fullName>
        <label>Manufacturer's preliminary analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Reference_Number__c</fullName>
        <description>Reference number by manufacturer</description>
        <label>Reference number by manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Remedial_Action__c</fullName>
        <description>Remedial action/corrective action/preventive action/Field Safety Corrective Action</description>
        <inlineHelpText>Remedial action/corrective action/preventive action/Field Safety Corrective Action</inlineHelpText>
        <label>RA/CA/PA/FSCA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Medical_Device_Class__c</fullName>
        <description>Medical Device Class</description>
        <inlineHelpText>Medical Device Class</inlineHelpText>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AIMD Active implants</fullName>
                </value>
                <value>
                    <fullName>MDD Class III</fullName>
                </value>
                <value>
                    <fullName>MDD Class IIb</fullName>
                </value>
                <value>
                    <fullName>MDD Class IIa</fullName>
                </value>
                <value>
                    <fullName>MDD Class I</fullName>
                </value>
                <value>
                    <fullName>IVD Annex II List A</fullName>
                </value>
                <value>
                    <fullName>IVD Annex II List B</fullName>
                </value>
                <value>
                    <fullName>IVD Devices for self-testing</fullName>
                </value>
                <value>
                    <fullName>IVD General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Medical_Device_Current_Location__c</fullName>
        <description>Medical device current location/disposition (if known)</description>
        <inlineHelpText>Medical device current location/disposition (if known)</inlineHelpText>
        <label>Medical device current location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Medical_Device_Distributed_Countries__c</fullName>
        <description>For final reports only. The medical device has been distributed to the following countries:</description>
        <inlineHelpText>For final reports only. The medical device has been distributed to the following countries:</inlineHelpText>
        <label>Medical device distributed countries</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Within the EEA, Switzerland and Turkey</fullName>
                </value>
                <value>
                    <fullName>Candidate Countries</fullName>
                </value>
                <value>
                    <fullName>All EEA, Candidate Countries, Switzerland and Turkey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Medical_Device_Operator_During_Incident__c</fullName>
        <description>Operator of the medical device at the time of incident</description>
        <inlineHelpText>Operator of the medical device at the time of incident</inlineHelpText>
        <label>Medical device operator during incident</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Healthcare Professional</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Model_Number__c</fullName>
        <description>Model number</description>
        <inlineHelpText>Model number</inlineHelpText>
        <label>Model number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__NCA_Reference_Number__c</fullName>
        <description>Reference number assigned by NCA</description>
        <inlineHelpText>Reference number assigned by NCA</inlineHelpText>
        <label>Reference number assigned by NCA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Name_of_Healthcare_Facility__c</fullName>
        <description>Name of the healthcare facility</description>
        <inlineHelpText>Name of the healthcare facility</inlineHelpText>
        <label>Healthcare Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__NomenclatureSystem_preferable_GMDN__c</fullName>
        <description>Nomenclature system (preferable GMDN)</description>
        <inlineHelpText>Nomenclature system (preferable GMDN)</inlineHelpText>
        <label>Nomenclature system (preferable GMDN)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GMDN</fullName>
                </value>
                <value>
                    <fullName>UMDNS (ECRI)</fullName>
                </value>
                <value>
                    <fullName>EDMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Nomenclature_Code__c</fullName>
        <description>Nomenclature code</description>
        <inlineHelpText>Nomenclature code</inlineHelpText>
        <label>Nomenclature code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Nomenclature_System__c</fullName>
        <description>Nomenclature system</description>
        <inlineHelpText>Nomenclature system</inlineHelpText>
        <label>Unused Nomenclature system</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Nomenclature_Text__c</fullName>
        <description>Nomenclature text</description>
        <inlineHelpText>Nomenclature text</inlineHelpText>
        <label>Nomenclature text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Notified_Body_ID_Number__c</fullName>
        <description>Notified Body (NB) ID-number</description>
        <inlineHelpText>Notified Body (NB) ID-number</inlineHelpText>
        <label>Notified Body (NB) ID-number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Number_of_Medical_Devices_Involved__c</fullName>
        <description>Number of medical devices involved</description>
        <inlineHelpText>Number of medical devices involved</inlineHelpText>
        <label>Unused #of medical devices involved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Number_of_Patients_Involved__c</fullName>
        <description>Number of patients involved (if known)</description>
        <inlineHelpText>Number of patients involved (if known)</inlineHelpText>
        <label>Unused #of patients involved (if known)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Number_of_Similar_Incidents__c</fullName>
        <description>Number of similar incidents</description>
        <inlineHelpText>Number of similar incidents</inlineHelpText>
        <label>Unused Number of similar incidents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Number_of_similarIncidents__c</fullName>
        <description>Number of similar incidents</description>
        <inlineHelpText>Number of similar incidents</inlineHelpText>
        <label>Number of similar incidents</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Numberof_Medical_Devices_Involved__c</fullName>
        <description>Number of medical devices involved (if known)</description>
        <inlineHelpText>Number of medical devices involved (if known)</inlineHelpText>
        <label>No. of medi. devices involved (if known)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Numberof_patients_involved__c</fullName>
        <description>Number of patients involved (if known)</description>
        <inlineHelpText>Number of patients involved (if known)</inlineHelpText>
        <label>Number of patients involved (if known)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_Countries__c</fullName>
        <description>Other Countries (if any)</description>
        <label>Other Countries (if any)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_NCA__c</fullName>
        <description>Identify to what other NCA's this report was also sent</description>
        <inlineHelpText>Identify to what other NCA's this report was also sent</inlineHelpText>
        <label>Other NCA's this report was sent to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_Relevant_History__c</fullName>
        <label>Other Relevant History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__PatientOutcome__c</fullName>
        <description>Patient outcome</description>
        <inlineHelpText>Patient outcome</inlineHelpText>
        <label>Patient outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_Corrective_Action__c</fullName>
        <label>Patient Corrective Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_Identifier__c</fullName>
        <label>Patient Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_Outcome__c</fullName>
        <description>Patient outcome</description>
        <inlineHelpText>Patient outcome</inlineHelpText>
        <label>Patient outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_Weight__c</fullName>
        <description>Weight in kilograms, if applicable</description>
        <inlineHelpText>Weight in kilograms, if applicable</inlineHelpText>
        <label>Patient Weight(in kilograms)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_age__c</fullName>
        <description>Age of the patient at the time of incident, if applicable</description>
        <inlineHelpText>Age of the patient at the time of incident, if applicable</inlineHelpText>
        <label>Patient age at the time of incident</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Recipient_Name_of_NCA__c</fullName>
        <description>Recipient (Name of NCA)</description>
        <inlineHelpText>Recipient (Name of NCA)</inlineHelpText>
        <label>Recipient (Name of NCA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Relevant_Lab_Data__c</fullName>
        <label>Relevant Lab Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Remedial_Action__c</fullName>
        <description>Remedial action taken by the healthcare facility relevant to the care of the patient</description>
        <inlineHelpText>Remedial action taken by the healthcare facility relevant to the care of the patient</inlineHelpText>
        <label>Remedial action to care for patient</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Report_Date__c</fullName>
        <description>Date of this report</description>
        <inlineHelpText>Date of this report</inlineHelpText>
        <label>Date of this report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Scheduled_Time_for_Identified_Actions__c</fullName>
        <description>Time schedule for the implementation of the identified actions</description>
        <inlineHelpText>Time schedule for the implementation of the identified actions</inlineHelpText>
        <label>Schedule impl. of identified actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Serial_Numbers__c</fullName>
        <description>Serial numbers</description>
        <inlineHelpText>Serial numbers</inlineHelpText>
        <label>Serial number(s) (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Serious_Public_Threat__c</fullName>
        <description>Serious public threat</description>
        <inlineHelpText>Serious public threat</inlineHelpText>
        <label>Incident represent serious public threat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Signature_1_Performed_By__c</fullName>
        <label>Signature 1 Performed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Signature_1_Performed_On__c</fullName>
        <label>Signature 1 Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Signature_2_Performed_By__c</fullName>
        <label>Signature 2 Performed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Signature_2_Performed_On__c</fullName>
        <label>Signature 2 Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Software_Version__c</fullName>
        <description>Software version number</description>
        <inlineHelpText>Software version number</inlineHelpText>
        <label>Software version number (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Status_of_Submitter__c</fullName>
        <description>Status of submitter</description>
        <inlineHelpText>Status of submitter</inlineHelpText>
        <label>Status of submitter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Authorised Representative within EEA, Switzerland and Turkey</fullName>
                </value>
                <value>
                    <fullName>Others: (identify the role)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__SubmitterCountry__c</fullName>
        <description>SubmitterCountry</description>
        <inlineHelpText>Submitter Country</inlineHelpText>
        <label>Submitter Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Submitter_Address__c</fullName>
        <description>Submitter Address</description>
        <inlineHelpText>Submitter Address</inlineHelpText>
        <label>Submitter Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Submitter_City__c</fullName>
        <description>Submitter City</description>
        <inlineHelpText>Submitter City</inlineHelpText>
        <label>Submitter City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Submitter_Contact__c</fullName>
        <description>Submitter's Contact</description>
        <inlineHelpText>Submitter's Contact</inlineHelpText>
        <label>Submitter Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Submitter_Country__c</fullName>
        <description>Submitter Country</description>
        <inlineHelpText>Submitter Country</inlineHelpText>
        <label>Unused Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Submitter_Email__c</fullName>
        <description>Submitter Email</description>
        <inlineHelpText>Submitter Email</inlineHelpText>
        <label>Submitter E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Submitter_Fax__c</fullName>
        <description>Submitter Fax</description>
        <inlineHelpText>Submitter Fax</inlineHelpText>
        <label>Submitter Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Submitter_Name__c</fullName>
        <description>Submitter's Name</description>
        <inlineHelpText>Submitter's Name</inlineHelpText>
        <label>Submitter’s name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Submitter_Phone__c</fullName>
        <description>Submitter Phone</description>
        <inlineHelpText>Submitter Phone</inlineHelpText>
        <label>Submitter Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Submitter_Postal_Code__c</fullName>
        <description>Submitter Postal Code</description>
        <inlineHelpText>Submitter Postal Code</inlineHelpText>
        <label>Submitter Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Type_of_Report__c</fullName>
        <description>Type of report</description>
        <inlineHelpText>Type of report</inlineHelpText>
        <label>Type of report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial report</fullName>
                </value>
                <value>
                    <fullName>Follow-up report</fullName>
                </value>
                <value>
                    <fullName>Combined initial and final report</fullName>
                </value>
                <value>
                    <fullName>Final report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Usage_of_Medical_Device__c</fullName>
        <description>Usage of the medical device</description>
        <inlineHelpText>Usage of the medical device</inlineHelpText>
        <label>Usage of the medical device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial use</fullName>
                </value>
                <value>
                    <fullName>Reuse of a single use medical device</fullName>
                </value>
                <value>
                    <fullName>Reuse of a reusable medical device</fullName>
                </value>
                <value>
                    <fullName>Re-serviced/refurbished</fullName>
                </value>
                <value>
                    <fullName>Other (please specify)</fullName>
                </value>
                <value>
                    <fullName>Problem noted prior use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__User_Facility_Report_Reference__c</fullName>
        <description>User facility report reference number</description>
        <inlineHelpText>User facility report reference number</inlineHelpText>
        <label>User facility report reference number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__User_facility_number__c</fullName>
        <label>User facility number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Whether_Manufacturer_Aware__c</fullName>
        <description>Is the manufacturer aware of similar incidents with this type of medical device with a similar root cause?</description>
        <inlineHelpText>Is the manufacturer aware of similar incidents with this type of medical device with a similar root cause?</inlineHelpText>
        <label>Similar incidents with this device type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__XML_Created_Date_Time__c</fullName>
        <label>XML Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123Task_Key_Value__c</fullName>
        <label>Task Field Update Key Value</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CMPL123CMEMEDDEVcCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Assessment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Questionnaire__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Local Assessment</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Questionnaire__c</referenceTo>
        <relationshipLabel>MEDDEV</relationshipLabel>
        <relationshipName>MEDDEV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Subsidiary_Text__c</fullName>
        <label>Local Subsidiary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>